2015-01-20  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.35 released.

2015-01-20  c.hetherington  <cth@carlh.net>

	* More informative error when failing to decode
	JPEG2000 files.

2015-01-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.34 released.

2015-01-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.33 released.

2015-01-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.32 released.

2015-01-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.31 released.

2015-01-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.30 released.

2015-01-11  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.29 released.

2015-01-11  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.28 released.

2015-01-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.27 released.

2015-01-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.26 released.

2015-01-04  Carl Hetherington  <cth@carlh.net>

	* Fix loading of SMPTE XML subtitles which
	are not MXF-wrapped.

2014-12-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.25 released.

2014-12-11  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.24 released.

2014-12-11  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.23 released.

2014-12-11  Carl Hetherington  <cth@carlh.net>

	* Add a language property to subtitle content and use it
	for the DCP subtitle's language specification.

2014-11-24  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.22 released.

2014-11-24  Carl Hetherington  <cth@carlh.net>

	* Allow import of J2K image sequences.

2014-11-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.21 released.

2014-11-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.0.20 released.

2014-11-10  Carl Hetherington  <cth@carlh.net>

	* Guess initial scale from the size of video
	content images, taking pixel aspect ratio into
	account where possible.

2014-11-07  c.hetherington  <cth@carlh.net>

	* Add a hint if there is 3D content in a proposed 2D DCP.
